Update link to style

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Linkazon</title>
+    <link rel="stylesheet" href="/style/style.css">
   </head>
   <body>
     <div class="wrapper">
