Add js to popup

--- a/popup.html
+++ b/popup.html
@@ -10,5 +10,6 @@
         <div class="info"></div>
         <button>Shorten</button>
     </div>
+    <script src="/src/main.js"></script>
   </body>
 </html>
